@@ -8,37 +8,33 @@ import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
 import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import dev.muggel.wake.Wake;
-import io.papermc.paper.command.brigadier.MessageComponentSerializer;
+import dev.muggel.wake.core.commands.CommandHelper;
 import io.papermc.paper.command.brigadier.argument.CustomArgumentType;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.minimessage.tag.resolver.Placeholder;
+import org.jetbrains.annotations.Contract;
 import org.jspecify.annotations.NonNull;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
-public class WakeEnumArgumentType<T extends Enum<T>> implements CustomArgumentType<String, String> {
+/**
+ * Any enum as an argument (case-insensitive input). <br>
+ * Parses to the constant's own name, so a call site can hand it straight to {@code valueOf}. <br>
+ * Use for closed sets of choices instead of validating a raw word in the executor.
+ */
+public final class WakeEnumArgumentType implements CustomArgumentType<String, String> {
+    private static final DynamicCommandExceptionType INVALID_ENUM = ArgumentHelper.localizedException("commands.invalid_option");
     private final List<String> validNames;
 
-    private static final DynamicCommandExceptionType INVALID_ENUM = new DynamicCommandExceptionType(
-            obj -> {
-                Component comp = Wake.getPlugin(Wake.class).getMessageManager().getComponent("commands.invalid_option",
-                        Placeholder.unparsed("input", String.valueOf(obj)));
-                return MessageComponentSerializer.message().serialize(comp);
-            }
-    );
-
-    private WakeEnumArgumentType(@NonNull Class<T> enumClass) {
+    private WakeEnumArgumentType(@NonNull Class<? extends Enum<?>> enumClass) {
         this.validNames = Arrays.stream(enumClass.getEnumConstants())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public static <T extends Enum<T>> WakeEnumArgumentType<T> wakeEnum(Class<T> enumClass) {
-        return new WakeEnumArgumentType<>(enumClass);
+    @Contract(value = "_ -> new", pure = true)
+    public static @NonNull WakeEnumArgumentType wakeEnum(@NonNull Class<? extends Enum<?>> enumClass) {
+        return new WakeEnumArgumentType(enumClass);
     }
 
     @Override
@@ -49,22 +45,18 @@ public class WakeEnumArgumentType<T extends Enum<T>> implements CustomArgumentTy
     @Override
     public @NonNull String parse(@NonNull StringReader reader) throws CommandSyntaxException {
         int start = reader.getCursor();
-        String input = reader.readUnquotedString();
-
-        if (validNames.stream().noneMatch(n -> n.equalsIgnoreCase(input))) {
-            reader.setCursor(start);
-            throw INVALID_ENUM.createWithContext(reader, input);
+        String input = ArgumentHelper.readToken(reader);
+        for (String name : validNames) {
+            if (name.equalsIgnoreCase(input)) {
+                return name;
+            }
         }
-
-        return input.toUpperCase();
+        reader.setCursor(start);
+        throw INVALID_ENUM.createWithContext(reader, input);
     }
 
     @Override
     public <S> @NonNull CompletableFuture<Suggestions> listSuggestions(@NonNull CommandContext<S> context, @NonNull SuggestionsBuilder builder) {
-        String remaining = builder.getRemaining().toLowerCase();
-        validNames.stream()
-                .filter(s -> s.toLowerCase().startsWith(remaining))
-                .forEach(builder::suggest);
-        return builder.buildFuture();
+        return CommandHelper.suggestMatching(builder, validNames);
     }
 }
